<resources>
    <string name="app_name">HelpsAap</string>
    <string name="permission_required_text">Requires Location Permission</string>
    <string name="location_disabled">GPS not available!\nYour GPS is either not available or set to a low accuracy.
        Please ensure GPS settings enabled with high accuracy and try again for better results.\n
    </string>
    <string name="storage_permission_warn">Please allow location permission to continue further</string>
    <string name="permission_storage_required_text">Requires Storage Permission</string>
    <string name="about_us">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type
and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset
sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker
including versions of Lorem Ipsum</string>
    <string name="prompt_tnc"><u>Terms &amp; Conditions</u></string>
    <string name="prompt_pp"><u>Privacy Policy</u></string>
    <string name="agree_tnc">Agree to <b><u>Terms &amp; Conditions</u></b></string>
    <string name="agree_tnc2">Agree to Terms &amp; Conditions</string>

    <string name="text_login">Log In</string>
    <string name="text_hint_name">Name</string>
    <string name="text_hint_username">Email</string>
    <string name="text_hint_password">Password\nMaximum 6 Characters</string>
    <string name="text_signup_prompt">Haven’t registered yet? Register Now</string>
    <string name="text_continue">Continue</string>
    <string name="text_hint_mob">Mobile Number</string>
    <string name="text_hint_pin">Panchayath/Municipality</string>
    <string name="text_hint_cmpny">Business/Shop/Company/Name</string>
    <string name="text_hint_wt_no">Whatsapp Number</string>
    <string name="text_hint_email">Email Address</string>
    <string name="text_hint_web">Website</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="no_apps_found">No apps found to perform this action.</string>
    <string name="exit_tap_alert">Click BACK again to exit</string>
    <string name="add_categories"><u>Add Categories</u></string>
    <string name="view_map"><u>View in Map</u></string>
    <string name="forgot_pass_desc">We will send an OTP to your registered email id, use the OTP to verify your account and then Reset your password.</string>
    <string name="refund">Refund</string>
    <string name="signup_confirmation">You will be redirected to the Payment section and will be charged ₹99 for an annual membership.\nPlease confirm the details provided.</string>
    <string name="confirm_dlg_positive_confirm">Confirm</string>
    <string name="confirm_dlg_negetive_cancel">Cancel</string>

</resources>