<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data >
        <variable
            name="viewModel"
            type="com.janustech.helpsaap.ui.profile.ProfileViewModel"/>
        <variable
            name="loginRequest"
            type="com.janustech.helpsaap.network.requests.LoginRequest"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/app_logo"
            app:layout_constraintVertical_bias="0.3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etUserNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="none"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:padding="1dp"
                android:fontFamily="@font/segoui"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_custom_18"
                android:layout_height="@dimen/custom_dimen_48"
                android:background="@drawable/rounded_rect_grey_filled"
                android:hint="@string/text_hint_username"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:text="@={viewModel.userName}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="none"
            app:layout_constraintTop_toBottomOf="@+id/etUserNameLayout"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            app:passwordToggleEnabled="true"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:padding="1dp"
                android:fontFamily="@font/segoui"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_custom_18"
                android:layout_height="@dimen/custom_dimen_48"
                android:maxLength="6"
                android:background="@drawable/rounded_rect_grey_filled"
                android:hint="@string/text_hint_password"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            style="@style/HelpAapButtonStyle"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordLayout"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="24dp"
            android:text="@string/text_login"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="@dimen/custom_dimen_56"
            android:onClick="@{() -> viewModel.processLogin()}"/>

        <TextView
            android:id="@+id/tvPromptSignup"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            android:layout_marginTop="37dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:text="@string/text_signup_prompt"
            android:fontFamily="@font/segoui"
            android:gravity="center"
            android:textColor="@color/black"
            android:textColorLink="@color/app_accent_color"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>